refactor: apply Java 25 idioms across codebase
- Replace unused catch variables (e, ignored) with unnamed pattern `_`
- Use getFirst()/getLast() on SequencedCollection instead of get(0)/get(size-1)
- Convert sequential instanceof chain in ResumeCommand to switch pattern matching
  (switch statement, not expression, because Delete case uses continue)